section login added:

--- a/src/main/resources/templates/user_login.html
+++ b/src/main/resources/templates/user_login.html
@@ -7,7 +7,7 @@
 
 	<header class='container header__container' th:replace="fragment/header.html :: header"></header>
 
-	<section>
+	<section class="login">
 		<div class="container login__container">
 			<div class="login__left">
 				<img th:src="@{'photos/register.png'}" alt="image" />
