--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -29,6 +29,7 @@
 
 	--color-bg: #D5F5FD;
 	--color-background: #f3f3f3;
+	--color-background-variant: #f9f9f9;
 	
 	--color-dark: #000;
 	--color-white: #fff;
