--- a/src/main/resources/templates/company_registration.html
+++ b/src/main/resources/templates/company_registration.html
@@ -21,6 +21,8 @@
             </form>
         </div> -->
 	</header>
+	<div class='full__width' th:insert="fragment/nav.html :: navbar">
+	</div>
 
 	<!-- Company Registration -->
 	<section class="company">
