--- a/src/main/resources/static/css/diversificationgraph.css
+++ b/src/main/resources/static/css/diversificationgraph.css
@@ -22,5 +22,11 @@ h1 {text-align: center;
   font-weight: bold;
   color: blue;
 }
+.center__dashboard{
+	 display: flex;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 800px; /* Adjust the max-width as needed */
 
+}
 
