--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -10,26 +10,9 @@
     </div>
 </header>
 <!-- navigation -->
-<div class='full__width'>
-    <nav class='container nav__container'>
-        <div class="left">
-            <ul>
-                <li><a href="/" class="nav__link">Home</a></li>
-                <li><a href="#" class="nav__link">Start Investing</a></li>
-                <li><a href="#" class="nav__link">Raise Capital</a></li>
-                <li><a href="company_registration.html" class="nav__link">Register Company</a></li>
-                <li><a href="invest.html" class="nav__link">Invest</a></li>
-            </ul>
-        </div>
+<header class='container header__container' th:replace="fragment/header.html :: header"></header>
+	<div class='full__width' th:insert="fragment/nav.html :: navbar"> </div>
 
-        <div class="right">
-            <ul>
-                <li><a href="user_login.html" class="nav__link">Login</a></li>
-                <li><a href="user_signup.html" class="nav__link">Sign Up</a></li>
-            </ul>
-        </div>
-    </nav>
-</div>
 <!-- table -->
 <section>
     <h1>Company Table</h1>
@@ -81,6 +64,11 @@
         </tr>
     </table>
 </section>
+<footer>
+		<footer th:insert="fragment/footer.html :: footer">
+
+		</footer>
+
 </body>
 
 </html>
