--- a/src/main/resources/templates/user_login.html
+++ b/src/main/resources/templates/user_login.html
@@ -10,7 +10,7 @@
 	<section>
 		<div class="container login__container">
 			<div class="login__left">
-				<img th:src="@{'photos/register.png'}" alt="image" />
+				<img th:src="@{'/photos/register.png'}" alt="image" />
 			</div>
 			<div class="login__right">
 				<div th:if="${param.error}" class="alert alert-error text-danger">
