--- a/src/main/resources/templates/fragment/head.html
+++ b/src/main/resources/templates/fragment/head.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" type="text/css" th:href="@{/css/dashboard.css}">
   <link rel="stylesheet" type="text/css" th:href="@{/css/company_registration.css}">
   <link rel="stylesheet" type="text/css" th:href="@{/css/company_table.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/css/history.css}">
 
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
