--- a/src/main/resources/templates/refund.html
+++ b/src/main/resources/templates/refund.html
@@ -5,52 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/load_fund.css">
+
     <title>Sanolagani</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/Nav.css">
-    <link rel="stylesheet" href="css/Header.css">
-    <link rel="stylesheet" href="css/Home.css">
-    <link rel="stylesheet" href="css/HowToInvest.css">
-    <link rel="stylesheet" href="css/Footer.css">
-    <link rel="stylesheet" href="css/MostMomentum.css">
-    <link rel="stylesheet" href="css/MostFunded.css">
+    <head th:replace="fragment/head.html :: headerfiles"></head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="css/privacy.css">
-    <link rel="stylesheet" href="css/pageNotFound.css">
-    <link rel="stylesheet" href="css/dashboard.css">
+ 
 </head>
 
 <body>
-    <!-- main header -->
-    <header class='container header__container'>
-        <div>
-            <h1><a href="/" class='logo hover_none'>Sanolagani</a> </h1>
-        </div>
-    </header>
+ <header class='container header__container' th:replace="fragment/header.html :: header"></header>
+	<div class='full__width' th:insert="fragment/nav.html :: navbar"> </div>
 
-    <!-- navigation -->
-    <div class='full__width'>
-        <nav class='container nav__container'>
-            <div class="left">
-                <ul>
-                    <li><a href="/" class="nav__link">Home</a></li>
-                    <li><a href="#" class="nav__link">Start Investing</a></li>
-                    <li><a href="#" class="nav__link">Raise Capital</a></li>
-                    <li><a href="company_registration.html" class="nav__link">Register Company</a></li>
-                    <li><a href="invest.html" class="nav__link">Invest</a></li>
-                </ul>
-            </div>
-
-            <div class="right">
-                <ul>
-                    <li><a href="user_login.html" class="nav__link">Login</a></li>
-                    <li><a href="user_signup.html" class="nav__link">Sign Up</a></li>
-                </ul>
-            </div>
-        </nav>
-    </div>
 
     <!-- Dashboard -->
     <section class="dashboard">
@@ -73,7 +41,7 @@
             <div class="center__dashboard board">
                 <form action="#">
                     <div class="bank_row">
-                        <label class="load-title" for="account_number">ACCOUNT NUMBER <span style="color: red">*</span></label>
+                        <label class="load-title" for="account_number">PHONE NUMBER <span style="color: red">*</span></label>
                         <input class="load_input" type="number" id="account_number" min="0"  oninput="validity.valid||(value='')" required>
                     </div>
                     <div class="bank_row">
@@ -107,40 +75,10 @@
             </div>
         </div>
     </section>
-
-    <!-- Footer -->
-    <footer>
-        <div class="container footer__container">
-            <div class="first">
-                <h1 class='logo'>Sanolagani</h1>
-                <h5>&copy; all rights are reserved 2023</h5>
-            </div>
-            <div class="second">
-                <h2>About Us</h2>
-                <ul class='footer__list'>
-                    <li><a href="#" class='about__link'>Our Team</a></li>
-                    <li><a href="#" class='about__link'>Careers</a></li>
-                    <li><a href="#" class='about__link'>Blog</a></li>
-                </ul>
-            </div>
-            <div class="third">
-                <h2>Wrok Together</h2>
-                <ul class='footer__list'>
-                    <li><a href="#" class='about__link'>Raise Capital</a></li>
-                    <li><a href="#" class='about__link'>Refer a friend</a></li>
-                    <li><a href="#" class='about__link'>Success stories</a></li>
-                    <li><a href="#" class='about__link'>Partnership</a></li>
-                </ul>
-            </div>
-            <div class="fourth">
-                <h2>Need Help</h2>
-                <ul class='footer__list'>
-                    <li><a href="#" class='about__link'>Contact us</a></li>
-                    <li><a href="#" class='about__link'>Need Help</a></li>
-                </ul>
-            </div>
-        </div>
-    </footer>
+      <footer>
+		    <footer th:insert="fragment/footer.html :: footer">
+		</footer>
+  
 
     <!-- Fund Management Dropdown Script -->
     <script>
