added all css files import on styles.css

--- a/src/main/resources/static/css/details.css
+++ b/src/main/resources/static/css/details.css
@@ -128,3 +128,8 @@ img{
     height: inherit;
     object-fit: fill;
 }
+
+.payment-success-message{
+  background-color:#AEFFD8;
+  color: #285943;
+}
