--- a/src/main/resources/templates/fragment/nav.html
+++ b/src/main/resources/templates/fragment/nav.html
@@ -6,7 +6,7 @@
 			<li><a href="/">Home</a></li>
 			<li><a href="#">Start Investing</a></li>
 			<li><a th:href="@{/companyregister}">Raise Capital</a></li>
-			<li><a th:href="@{/company/info}">Company</a></li>
+			<li><a th:href="@{/company}">Company</a></li>
 			<li><a href="#">Learn</a></li>
 		</ul>
 	</div>
