--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -137,44 +137,8 @@
 		</div>
 	</section>
 
-
-	<!-- How to Invest -->
-	<section class='howtoinvest'>
-		<div class="container invest__container">
-			<h1>How to invest</h1>
-			<div class="howtoinvest__info">
-				<div class="invest__first">
-					<h2 class='gray'>1.</h2>
-					<h2 class='text-upper'>sign</h2>
-					<h2 class='text-upper'>up</h2>
-					<p class='invest__desc'>Securely create an account on
-						Sanolagani.</p>
-				</div>
-				<div class="invest__second">
-					<h2 class='gray'>2.</h2>
-					<h2 class='text-upper'>Browse</h2>
-					<h2 class='text-upper'>investment</h2>
-					<p class='invest__desc'>Review hundreds of investment
-						opportunities, from Startups to Collectibles.</p>
-				</div>
-				<div class="invest__third">
-					<h2 class='gray'>3.</h2>
-					<h2 class='text-upper'>make</h2>
-					<h2 class='text-upper'>investment</h2>
-					<p class='invest__desc'>Submit your payment and own a financial
-						stake in a Startup or Collectible.</p>
-				</div>
-				<div class="invest__fourth">
-					<h2 class='gray'>4.</h2>
-					<h2 class='text-upper'>hold</h2>
-					<h2 class='text-upper'>or sell</h2>
-					<p class='invest__desc'>You can continue to invest in future
-						rounds, hold on to your investment, or sell eligible securities on
-						Sanolagani’s investment platform.</p>
-				</div>
-			</div>
-		</div>
-	</section>
+	<section th:insert="fragment/investment-guidelines.html :: guidelines"></section>
+	<footer th:insert="fragment/footer.html :: footer"></footer>
 </body>
 
 </html>
