adding of template for refund and rendering static file in home page

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -68,7 +68,7 @@
 				
 				<div>
 				<a th:href="@{/loadfund}">Load</a>
-				<a th:href="@{'/refund/collateral/'+${id}+'/'}">Refund</a>
+				<a th:href="@{/refund/collateral}">Refund</a>
 				</div>
 			</div>
 		</div>
@@ -187,10 +187,6 @@
            
 		</script>
 </body>
-<<<<<<< HEAD
-  
-   
+
 </html>
-=======
-</html>
->>>>>>> 24cd3974d36def07fbe9204f361e9634111e2e7c
+
