modification on dashboard were made

--- a/src/main/resources/templates/company_registration.html
+++ b/src/main/resources/templates/company_registration.html
@@ -53,7 +53,7 @@
 				<div>
 					<input class="register_input" type="text" placeholder="Website URL" name="websiteurl"
 						th:field="*{websiteurl}"> <input class="register_input" type="number"
-						placeholder="Raised Capital" name="raisedcapital" th:field="*{raisedcapital}">
+						placeholder="Capital To Raise" name="raisedcapital" th:field="*{raisedcapital}">
 				</div>
 				<div>
 					<input class="register_input" type="text" placeholder=" sector"
@@ -61,18 +61,15 @@
 						class="register_input" type="number"
 						placeholder=" maximum quantity" name="maximum_quantity">
 				</div>
-<<<<<<< HEAD
 
-=======
-		<div>
->>>>>>> 4ff590dc79e0fd1bf78347fd97308bdd63ba5f59
+				<div>
 				<input class="register_input register" type="text"
 					placeholder="Time Span For Raising Capital"
 					name="timespanforraisingcapital"
 					th:field="*{timespanforraisingcapital}"> <input
-					class="register_input" type="number" placeholder=" per share price"
+					class="register_input" type="number" placeholder="Price per Unit"
 					name="price_per_share"> <br>
-</div>
+				</div>
 
 				<div class="doc_file">
 					<div>
