--- a/src/main/resources/templates/diversificationgraph.html
+++ b/src/main/resources/templates/diversificationgraph.html
@@ -25,12 +25,15 @@
       </div>
 
     </div>
-    <div class="chart-container">
-      <canvas id="ruler-chart"></canvas>
+    <div>
+      <h2 style="color:#118ab2">1/</h2><h4 style="color:#073b4c; padding-top:5px;">10</h4>
+      <div class="chart-container">
+        <canvas id="ruler-chart"></canvas>
+      </div>
     </div>
     <div class="center__dashboard board">
-				<canvas id="myChart2"></canvas>
-			</div>
+      <canvas id="myChart2"></canvas>
+    </div>
 
 
 
