--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -15,186 +15,24 @@
 </head>
 
 <body>
-<header class='container header__container' th:replace="fragment/header.html :: header"></header>
-<div class='full__width' th:insert="fragment/nav.html :: navbar"> </div>
-<section th:insert="fragment/dashboard.html :: dashboard"></section>
+	<header class='container header__container' th:replace="fragment/header.html :: header"></header>
+	<div class='full__width' th:insert="fragment/nav.html :: navbar"> </div>
+	<section th:insert="fragment/dashboard.html :: dashboard"></section>
 
-<<<<<<< HEAD
-=======
-	<!-- Dashboard -->
-	<section class="dashboard">
-		<div class=" dashboard__container">
-			<div class="left__dashboard board">
-				<div>
-					<p><a th:href="@{/riskinfo}">Sanolagani Dashboard</a></p>
-					<p><a href="#">My Information</a></p>
-					<a th:href="@{'/investmenthistory/'}">My Investment</a>
-					<div class="dropdown">
-						<button onclick="fundManagement()" class="drop-btn">Fund Management</button>
-						<div id="fundManagement" class="fundManagementContent">
-							<a th:href="@{'/collateralsummery/'+${id}+'/'}"><i class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Collateral History</a>
-							<a th:href="@{'/fundhistory/'+${id}+'/'}"><i class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Fund Transfer History</a>
-							<a href="#"><i class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Fund Settlement</a>
-						</div>
-					</div>
-				</div>
-			</div>
-			<div class="center__dashboard board">
-				<canvas id="myChart2"></canvas>
-			</div>
-			<div class="right__dashboard">
-				<div class="turnover board">
-					<h2>Welcome,[[${user}]]</h2>
-						<div>
-							<p>Total investment</p>
-					<p>[[${totalInvestment}]]</p>
-				</div>
-				<div>
-					<p>Total company</p>
-					<p>[[${size}]]</p>
-				</div>
-				<div>
-					<p>Total share</p>
-					<p>[[${totalshare}]]</p>
-				</div>
+	<!-- Footer -->
+	<footer>
+		<footer th:insert="fragment/footer.html :: footer"></footer>
 
-        </div>
-
-        <div class="collateral__summary board">
-            <h2 class="">MY COLLATERAL SUMMARY</h2>
-            <h3 class="bold">Rs. <span id="amount"></span></h3>
-
-				<div>
-					<p>Collateral balance</p>
-					<p>[[${totalcollateralamount}]]</p>
-				</div>
-				
-				<div>
-				<a th:href="@{/loadfund}">Load</a>
-				<a th:href="@{'/refund/collateral/'+${id}+'/'}">Refund</a>
-				</div>
-			</div>
-		</div>
-		</div>
-	</section>
-
->>>>>>> 4ff590dc79e0fd1bf78347fd97308bdd63ba5f59
-
-<!-- Footer -->
-<footer>
-	<footer th:insert="fragment/footer.html :: footer"></footer>
-
-</footer>
+	</footer>
 
     <!-- Fund Management Dropdown Script -->
-    <script src="@{js/fundmanagement.js}">
-
-<<<<<<< HEAD
-=======
-
-			document.addEventListener("DOMContentLoaded", function () {
-				var canvas = document.getElementById("myChart2");
-
-				if (canvas) {
-					var ctx = canvas.getContext("2d");
-
-
-					var companies =[[${companynamelist}]]; // Replace with your actual company names
-					console.log(companies);
-					var shares = [2, 3, 4] // Replace with your actual number of shares data
-					var investments = [[${totalamountlist}]]; // Replace with your additional data
-
-					// Chart data
-					var chartData = {
-						labels: companies,
-						datasets: [
-							{
-								label: "investments",
-								data: investments,
-								type: 'line', // Bar chart for number of shares
-								backgroundColor: "#007bff",
-								borderWidth: 1
-							},
-
-						]
-					};
-					// Chart options
-					var chartOptions = {
-						responsive: true,
-						scales: {
-							y: {
-								beginAtZero: true
-							}
-						}
-					};
-
-					// Create combination chart
-					var myChart = new Chart(ctx, {
-						type: 'line',
-						data: chartData,
-						options: chartOptions
-					});
-
-				}
-			});
-			
-			
-			// khalti payment gateway
-			
-			
-        var config = {
-            // replace the publicKey with yours
-            "publicKey": "test_public_key_46b3052e00e145b5b2d988d17359b3a4",
-            "productIdentity": "1234567890",
-            "productName": "Dragon",
-            "productUrl": "http://gameofthrones.wikia.com/wiki/Dragons",
-            "paymentPreference": [
-                "KHALTI",
-                "EBANKING",
-                "MOBILE_BANKING",
-                "CONNECT_IPS",
-                "SCT",
-                ],
-            "eventHandler": {
-                onSuccess (payload) {
-                    // hit merchant api for initiating verfication
-                    console.log(payload);
-                },
-                onError (error) {
-                    console.log(error);
-                },
-                onClose () {
-                    console.log('widget is closing');
-                }
-            }
-        };
-
-        var checkout = new KhaltiCheckout(config);
-       
-        var payButton = document.getElementById("payment-button");
-        payButton.addEventListener("click", function () {
-             var amountInput = document.getElementById("amount-input");
-            var amount = amountInput.value;
-               if (amount) {
-                var amountInPaisa = amount * 100; // Convert amount from rupees to paisa
-                config.amount = amountInPaisa; // Set the amount in the config object
-                payButton.innerHTML = "Pay " + amount + " Rupees";
-                var amountInput = document.getElementById("amount");
-               amountInput.value = amount;
-                checkout.show({popupMobile: true});
-            } else {
-                alert("Please enter the amount.");
-            }
-        });
-            
->>>>>>> 4ff590dc79e0fd1bf78347fd97308bdd63ba5f59
-           
+    <script th:src="@{js/fundmanagement.js}" th:inline="javascript"></script>
+    <script>
+        function manageFund(){
+            document.getElementById("fundManagement").classList.toggle("show");
+        }
     </script>
 </body>
-<<<<<<< HEAD
-  
    
 </html>
-=======
-</html>
->>>>>>> 24cd3974d36def07fbe9204f361e9634111e2e7c
+
