--- a/src/main/resources/templates/details.html
+++ b/src/main/resources/templates/details.html
@@ -15,7 +15,6 @@
                     <div class="left__detail-main">
                         <h5><span>Bhoklagyo</span> &nbsp; Rs. <span>[[${company.price_per_share}]]</span> per share</h5>
                         <h2>Bhoklagyo - Feeding the distanced customer with taste.</h2>
-<<<<<<< HEAD
                         <span id="company-id" hidden>[[${company.id}]]</span>
                         <span id="pps" hidden>[[${company.price_per_share}]]</span>
                         <span id="maxq" hidden>[[${company.maximum_quantity}]]</span>
@@ -31,35 +30,15 @@
                                 Rs. [[${#numbers.formatInteger(max, 3, 'COMMA')}]]
                             </button>
                         </div>
-
-                        <div class="detail__amount">
-                            <span>Amount: Rs.&nbsp;
-                                <input type="number" class="detail__input" name="invest" id="paymentAmount">
-                            </span>
-<!--                                <button class="btn" id="pay">Continue</button>-->
-                            <span id="message" style="color:red; background-color: #ff22gg"></span>
-
-                            <button type="button" class="btn" id="confirm">Confirm</button>
-                        </div>
-=======
-    
-                        <form th:action="@{/paywithcollateral}" class="detail__form" method="post">
-                            <div class="details__buttons">
-                                <button class="btn btn-light">Rs. <span class="amount">100,000</span></button>
-                                <button class="btn btn-light">Rs. <span class="amount">100,000</span></button>
-                                <button class="btn btn-light">Rs. <span class="amount">100,000</span></button>
-                            </div>
                             <div class="detail__amount">
-								<input type="hidden" id="companyId" name="companyId" th:value="${company.id}">
                                 <span>Amount: Rs.&nbsp;
-                                    <input type="number"
-                                            class="detail__input" name="amount" oninput="this.value = 
-                                            !!this.value && Math.abs(this.value) >= 0 ? Math.abs(this.value) : null" id="paymentAmount">
+                                    <input type="number" class="detail__input" name="amount" id="paymentAmount">
                                 </span>
-                                <button class="btn" id="pay" type="submit">Pay with collateral</button>
+                                <span id="message" style="color:red; background-color: #ff22gg"></span>
+
+                                <button class="btn" id="confirm">Confirm</button>
+
                             </div>
-                        </form>
->>>>>>> 4ff590dc79e0fd1bf78347fd97308bdd63ba5f59
                     </div>
 
                     <div class="dropdown">
@@ -135,8 +114,11 @@
                                 href="#" class="additinoal__info">Trems and Conditinos</a> & <a href="#">Privacy
                                 Policy</a></p>
                     </div>
-
-                    <button type="submit" class="btn btn-success" disabled id="submit">Submit Investment</button>
+                    <form th:action="@{/paywithcollateral}" class="detail__form" method="post">
+                        <input type="hidden" id="companyId" name="companyId" th:value="${company.id}">
+                        <input type="hidden" id="totalAmount" name="amount">
+                        <button type="submit" class="btn btn-success" disabled id="submit">Submit Investment</button>
+                    </form>
 
                 </div>
             </div>
@@ -150,13 +132,10 @@
     <script src="https://khalti.s3.ap-south-1.amazonaws.com/KPG/dist/2020.12.17.0.0.0/khalti-checkout.iffe.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script th:src="@{/js/payment.js}"></script>
-<<<<<<< HEAD
 
     <script th:inline="javascript" th:src="@{/js/amount.js}">
 
 
     </script>
-=======
-    
->>>>>>> 4ff590dc79e0fd1bf78347fd97308bdd63ba5f59
+
 </html>
