--- a/src/main/resources/templates/fragment/dashboard.html
+++ b/src/main/resources/templates/fragment/dashboard.html
@@ -3,13 +3,14 @@
     <div class=" dashboard__container">
         <div class="left__dashboard board">
             <div>
-                <a href="#">Sanolagani Dashboard</a>
-                <a href="#">My Information</a>
+                <p><a th:href="@{/riskinfo}">Sanolagani Dashboard</a></p>
+                <p><a href="#">My Information</a></p>
+                <a th:href="@{'/investmenthistory/'}">My Investment</a>
                 <div class="dropdown">
-                    <button onclick="fundManagement()" class="drop-btn">Fund Management</button>
+                    <button onclick="manageFund()" class="drop-btn">Manage Fund</button>
                     <div id="fundManagement" class="fundManagementContent">
-                        <a href="#"><i class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Collateral Management</a>
-                        <a href="#"><i class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Fund Transfer History</a>
+                        <a th:href="@{'/collateralsummery/'+${id}+'/'}"><i class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Collateral History</a>
+                        <a th:href="@{'/fundhistory/'+${id}+'/'}"><i class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Fund Transfer History</a>
                         <a href="#"><i class="fa-sharp fa-solid fa-arrow-right"></i>&nbsp;Fund Settlement</a>
                     </div>
                 </div>
@@ -21,38 +22,35 @@
         <div class="right__dashboard">
             <div class="turnover board">
                 <h2>Welcome,[[${user}]]</h2>
-                <a th:href="@{/riskinfo}">
-                    <div>
-                        <p>Total investment</p>
-                </a>
-                <p>[[${totalInvestment}]]</p>
-            </div>
-            <div>
-                <p>Total company</p>
-                <p>[[${size}]]</p>
-            </div>
-            <div>
-                <p>Total share</p>
-                <p>[[${totalshare}]]</p>
+                <div>
+                    <p>Total investment</p>
+                    <p>[[${totalInvestment}]]</p>
+                </div>
+                <div>
+                    <p>Total company</p>
+                    <p>[[${size}]]</p>
+                </div>
+                <div>
+                    <p>Total share</p>
+                    <p>[[${totalshare}]]</p>
+                </div>
+
             </div>
 
+            <div class="collateral__summary board">
+                <h2 class="">MY COLLATERAL SUMMARY</h2>
+                <h3 class="bold">Rs. <span id="amount"></span></h3>
+
+                <div>
+                    <p>Collateral balance</p>
+                    <p>[[${totalcollateralamount}]]</p>
+                </div>
+
+                <div>
+                    <a th:href="@{/loadfund}">Load</a>
+                    <a th:href="@{'/refund/collateral/'+${id}+'/'}">Refund</a>
+                </div>
+            </div>
         </div>
-
-        <div class="collateral__summary board">
-            <h2 class="">MY COLLATERAL SUMMARY</h2>
-            <h3 class="bold">Rs. <span id="amount"></span></h3>
-
-            <div>
-                <p>Collateral Utilized</p>
-                <p>0</p>
-            </div>
-            <div>
-                <p>Collateral Available</p>
-                <p>0</p>
-            </div>
-            <input type="number" id="amount-input" placeholder="Enter amount" />
-            <button id="payment-button">Load collateral</button>
-        </div>
-    </div>
     </div>
 </section>
