--- a/src/main/resources/templates/user_signup.html
+++ b/src/main/resources/templates/user_signup.html
@@ -28,10 +28,15 @@
                     <input class='input__box' type="text`" placeholder='First Name' name="fname" required />
                     <input class='input__box' type="text" placeholder='Last Name' name="lname" required />
                     <input class='input__box' type="email" placeholder='Email' name="email" required />
-                    <input class='input__box' type="number" placeholder='Mobile Number' name="mobile" required />
+                    <input class='input__box' type="number" placeholder='Mobile Number' name="mobile" min="9"
+                        oninput="validity.valid||(value='')" required />
+
                     <input class='input__box' type="text`" placeholder='Address' name="address" required />
-                    <input class='input__box' type="password" placeholder='Password' name="password" required />
-                    <input class='input__box' type="password" placeholder='Password' name="c_password" required />
+                    <!-- <span id="password-error"> ** password</span> -->
+                    <input class='input__box' type="password" placeholder='Password' id="password" name="password"
+                        required />
+                    <input class='input__box' type="password" placeholder='Confirm Password' id="cpassword"
+                         name="c_password" required />
                     <input class='btn btn__login' type="submit" value='Sign Up' required />
                 </form>
             </div>
@@ -71,6 +76,8 @@
             </div>
         </div>
     </footer>
+
+    
 </body>
 
 </html>
