--- a/src/main/resources/static/css/admindashboard.css
+++ b/src/main/resources/static/css/admindashboard.css
@@ -4,36 +4,6 @@
   align-items: flex-start;
 }
 
-.sidebar {
-  width: 200px;
-  background-color: #f0f0f0;
-  padding: 20px;
-}
-
-.sidebar ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.sidebar li {
-  margin-bottom: 10px;
-}
-
-.sidebar a {
-  text-decoration: none;
-  color: #333;
-}
-
-.content {
-  display: flex;
-  flex: 1;
-  margin-left: 20px;
-}
-
-.sidebar-content {
-  width: 200px;
-}
 
 .main-content {
   flex: 50%;
@@ -55,11 +25,70 @@ h3 {
   text-align: center;
   margin-bottom: 15px;
 }
-.dropdown-menu {
-   display: none;
-   padding-left: 20px;
-}
+
 .sidebar-item:hover .dropdown-menu {
     display: block;
 }
+/* Reset default margin and padding */
+body, ul {
+  margin: 0;
+  padding: 0;
+}
+
+/* Sidebar styles */
+.sidebar {
+  background-color: #333;
+  color: #fff;
+  width: 200px;
+  height: 100vh;
+  padding: 20px;
+}
+
+.sidebar h2 {
+  margin-bottom: 20px;
+}
+
+.sidebar ul {
+  list-style-type: none;
+}
+
+.sidebar li {
+  margin-bottom: 10px;
+}
+
+.sidebar a {
+  color: #fff;
+  text-decoration: none;
+}
+
+.sidebar .dropdown-btn {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.dropdown-content {
+  display: none;
+}
+.dropdown-content2 {
+  display: none;
+}
+
+.dropdown-content a {
+  display: block;
+  padding: 10px;
+}
+
+/* Content area styles */
+.content {
+  padding: 20px;
+ 
+}
+
+/* Show dropdown content on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
         
