--- a/src/main/resources/templates/Collateral_summary.html
+++ b/src/main/resources/templates/Collateral_summary.html
@@ -32,7 +32,7 @@
             <td> <a th:text="${name}"></a></td>
             <td> <a th:text="${transaction.amount}"></a></td>
             <td>
-                <p th:text="${transaction.transaction_date_time}"></p>
+              <p th:text="${#temporals.format(investment.investment_date_time, 'yyyy-MM-dd') + ' ' + #temporals.format(investment.investment_date_time, 'HH:mm:ss')}"></p>
             </td>
             <td>
                 <p th:text="${transaction.payment_token}"></p>
