modified styles in dashboard

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -26,8 +26,53 @@
 	</footer>
 
     <!-- Fund Management Dropdown Script -->
-    <script th:src="@{js/fundmanagement.js}" th:inline="javascript"></script>
     <script>
+       document.addEventListener("DOMContentLoaded", function () {
+            var canvas = document.getElementById("myChart2");
+
+            if (canvas) {
+                var ctx = canvas.getContext("2d");
+
+
+                var companies =[[${companynamelist}]]; // Replace with your actual company names
+                console.log(companies);
+                var investments = [[${totalamountlist}]]; // Replace with your additional data
+
+                // Chart data
+                var chartData = {
+                    labels: companies,
+                    datasets: [
+                        {
+                            label: "investments",
+                            data: investments,
+                            type: 'line', // Bar chart for number of shares
+                            backgroundColor: "#007bff",
+                            borderWidth: 1
+                        },
+
+                    ]
+                };
+                // Chart options
+                var chartOptions = {
+                    responsive: true,
+                    scales: {
+                        y: {
+                            beginAtZero: true
+                        }
+                    }
+                };
+
+                // Create combination chart
+                var myChart = new Chart(ctx, {
+                    type: 'line',
+                    data: chartData,
+                    options: chartOptions
+                });
+
+            }
+        });
+
+
         function manageFund(){
             document.getElementById("fundManagement").classList.toggle("show");
         }
