--- a/src/main/resources/templates/diversificationgraph.html
+++ b/src/main/resources/templates/diversificationgraph.html
@@ -25,7 +25,7 @@
           High is considered better and less risky.
         </span>
       </div>
-      <div style="padding:5px; margin:0px;">
+      <div style="padding:5px; margin:0px; min-width:fit-content;">
         <h2 style="color:#118ab2; font-size: 3rem;">[[${ diversificationlevel }]]/</h2>
         <h4 style="color:#073b4c; font-size: 1.75rem; padding-top:2rem;">10</h4>
       </div>
